# surveylm-simrunner

./: README.md  pyproject.toml  run_simulations.py
data/inputs/: parameters_input_nurses.json  profiles_input_nurses.xlsx  questions_input_nurses.xlsx
data/outputs/: steve@panalogy-lab.com_completed_survey_data_1749182707.csv  steve@panalogy-lab.com_completed_survey_data_1749183568.csv  steve@panalogy-lab.com_completed_survey_data_1749184247.csv  steve@panalogy-lab.com_usage_data_1749182707.csv  steve@panalogy-lab.com_usage_data_1749183568.csv  steve@panalogy-lab.com_usage_data_1749184247.csv
